Fixing case exists improve coverage test (#307)
Co-authored-by: nileshkg <nileshkg001@gmail.com>
Co-authored-by: Babacar Ndiaye <babacar.ndiay93@gmail.com>