@@ -39,7 +39,7 @@ public class CaseRegistrationValidatorTest {
     private CaseService caseService;
 
     @Mock
-    private Configuration config;
+    private Configuration configuration;
 
     @Mock
     private CaseRepository caseRepository;
@@ -173,6 +173,7 @@ public class CaseRegistrationValidatorTest {
         courtCase.setCaseCategory("category1");
         List<StatuteSection> statuteSectionList = new ArrayList<>();
         statuteSectionList.add(StatuteSection.builder().tenantId("pb").build());
+        courtCase.setStatutesAndSections(statuteSectionList);
         request.setCases(courtCase);
 
         Exception exception = assertThrows(CustomException.class, () -> validator.validateCaseRegistration(request));
@@ -193,13 +194,64 @@ public class CaseRegistrationValidatorTest {
         statuteSectionList.add(StatuteSection.builder().tenantId("pb").build());
         List<Party> litigantList = new ArrayList<>();
         litigantList.add(Party.builder().tenantId("pb").build());
+        courtCase.setStatutesAndSections(statuteSectionList);
+        courtCase.setLitigants(litigantList);
         request.setCases(courtCase);
 
         Exception exception = assertThrows(CustomException.class, () -> validator.validateCaseRegistration(request));
     }
 
     @Test
-    void testValidateApplicationExistence_Exception() {
+    void testValidateApplicationExistence_ExistingApplication() {
+        CourtCase courtCase = new CourtCase();
+        courtCase.setTenantId("pg");
+        courtCase.setCaseCategory("civil");
+        Document document = new Document();
+        document.setFileStore("123");
+        courtCase.setDocuments(List.of(document));
+        AdvocateMapping advocateMapping = new AdvocateMapping();
+        advocateMapping.setAdvocateId("123");
+        courtCase.setRepresentatives(List.of(advocateMapping));
+        Party party = new Party();
+        party.setIndividualId("123");
+        courtCase.setLitigants(List.of(party));
+        LinkedCase linkedCase = LinkedCase.builder().id(UUID.randomUUID()).caseNumber("caseNumber").build();
+//        courtCase.setLinkedCases(List.of(linkedCase));
+        courtCase.setStatutesAndSections(List.of(new StatuteSection()));
+        courtCase.setFilingDate(LocalDate.parse("2021-12-12"));
+        Map<String, Map<String, JSONArray>> mdmsRes = new HashMap<>();
+        mdmsRes.put("case", new HashMap<>());
+        List<String> masterList = new ArrayList<>();
+        masterList.add("ComplainantType");
+        masterList.add("CaseCategory");
+        masterList.add("PaymentMode");
+        masterList.add("ResolutionMechanism");
+
+        CaseSearchRequest caseSearchRequest = new CaseSearchRequest();
+        List<CaseCriteria> caseCriteriaList = new ArrayList<>();
+        CaseCriteria caseCriteria = new CaseCriteria();
+        caseCriteria.setCaseId(linkedCase.getId().toString());
+        caseCriteriaList.add(caseCriteria);
+        caseSearchRequest.setRequestInfo(new RequestInfo());
+        caseSearchRequest.setCriteria(caseCriteriaList);
+
+        when(mdmsUtil.fetchMdmsData(new RequestInfo(),"pg","case", masterList)).thenReturn(mdmsRes);
+
+        when(individualService.searchIndividual(new RequestInfo(), "123")).thenReturn(true);
+        when(fileStoreUtil.fileStore("pg","123")).thenReturn(true);
+        when(advocateUtil.fetchAdvocateDetails(new RequestInfo(), "123")).thenReturn(true);
+        caseService.searchCases(caseSearchRequest);
+        when(configuration.getCaseBusinessServiceName()).thenReturn("case");
+
+        when(caseRepository.getApplications(any())).thenReturn((List.of(CaseCriteria.builder().filingNumber(courtCase.getFilingNumber()).caseId(String.valueOf(courtCase.getId()))
+                .cnrNumber(courtCase.getCnrNumber()).courtCaseNumber(courtCase.getCourCaseNumber()).build())));
+
+        Boolean result = validator.validateApplicationExistence(courtCase, new RequestInfo());
+        assertTrue(result);
+    }
+
+    @Test
+    void testValidateApplicationExistence_EmptyApplication() {
         CourtCase courtCase = new CourtCase();
         courtCase.setTenantId("pg");
         courtCase.setCaseCategory("civil");
@@ -232,61 +284,15 @@ public class CaseRegistrationValidatorTest {
         caseSearchRequest.setRequestInfo(new RequestInfo());
         caseSearchRequest.setCriteria(caseCriteriaList);
 
-        when(caseRepository.getApplications(any())).thenReturn(List.of(caseCriteria));
-        assertThrows(CustomException.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
+        when(caseRepository.getApplications(any())).thenReturn((Collections.emptyList()));
+
+        Boolean result = validator.validateApplicationExistence(courtCase, new RequestInfo());
+        assertTrue(!result);
     }
 
-//    @Test
-//    void testValidateApplicationExistence_ExistingApplication() {
-//        CourtCase courtCase = new CourtCase();
-//        courtCase.setId(UUID.randomUUID());
-//        courtCase.setTenantId("pg");
-//        courtCase.setCaseCategory("civil");
-//        Document document = new Document();
-//        document.setFileStore("123");
-//        courtCase.setDocuments(List.of(document));
-//        AdvocateMapping advocateMapping = new AdvocateMapping();
-//        advocateMapping.setAdvocateId("123");
-//        courtCase.setRepresentatives(List.of(advocateMapping));
-//        Party party = new Party();
-//        party.setIndividualId("123");
-//        courtCase.setLitigants(List.of(party));
-//        LinkedCase linkedCase = LinkedCase.builder().id(courtCase.getId()).caseNumber("caseNumber").build();
-//        courtCase.setLinkedCases(List.of(linkedCase));
-//        courtCase.setStatutesAndSections(List.of(new StatuteSection()));
-//        courtCase.setFilingDate(LocalDate.parse("2021-12-12"));
-//
-//        Map<String, Map<String, JSONArray>> mdmsRes = new HashMap<>();
-//        mdmsRes.put("case", new HashMap<>());
-//        List<String> masterList = new ArrayList<>();
-//        masterList.add("ComplainantType");
-//        masterList.add("CaseCategory");
-//        masterList.add("PaymentMode");
-//        masterList.add("ResolutionMechanism");
-//
-//        CaseSearchRequest caseSearchRequest = new CaseSearchRequest();
-//        List<CaseCriteria> caseCriteriaList = new ArrayList<>();
-//        CaseCriteria caseCriteria = new CaseCriteria();
-//        caseCriteriaList.add(caseCriteria);
-//        caseSearchRequest.setRequestInfo(new RequestInfo());
-//        caseSearchRequest.setCriteria(caseCriteriaList);
-//
-//        when(mdmsUtil.fetchMdmsData(new RequestInfo(),"pg","case", masterList)).thenReturn(mdmsRes);
-//
-//        when(individualService.searchIndividual(new RequestInfo(), "123")).thenReturn(true);
-//        when(fileStoreUtil.fileStore("pg","123")).thenReturn(true);
-//        when(advocateUtil.fetchAdvocateDetails(new RequestInfo(), "123")).thenReturn(true);
-//
-//        when(caseRepository.getApplications(any())).thenReturn(caseCriteriaList);
-//
-//        Boolean result = validator.validateApplicationExistence(courtCase, new RequestInfo());
-//        assertTrue(result);
-//    }
-
     @Test
-    void testValidateApplicationExistence_ExistingApplication_MDMSDataInvalid() {
+    void testValidateApplicationExistence_ExistingApplication_INVALID_LINKEDCASE_ID() {
         CourtCase courtCase = new CourtCase();
-        courtCase.setId(UUID.randomUUID());
         courtCase.setTenantId("pg");
         courtCase.setCaseCategory("civil");
         Document document = new Document();
@@ -298,12 +304,17 @@ public class CaseRegistrationValidatorTest {
         Party party = new Party();
         party.setIndividualId("123");
         courtCase.setLitigants(List.of(party));
-        LinkedCase linkedCase = LinkedCase.builder().id(courtCase.getId()).caseNumber("caseNumber").build();
+        LinkedCase linkedCase = LinkedCase.builder().id(UUID.randomUUID()).caseNumber("caseNumber").build();
         courtCase.setLinkedCases(List.of(linkedCase));
         courtCase.setStatutesAndSections(List.of(new StatuteSection()));
         courtCase.setFilingDate(LocalDate.parse("2021-12-12"));
         Map<String, Map<String, JSONArray>> mdmsRes = new HashMap<>();
         mdmsRes.put("case", new HashMap<>());
+        List<String> masterList = new ArrayList<>();
+        masterList.add("ComplainantType");
+        masterList.add("CaseCategory");
+        masterList.add("PaymentMode");
+        masterList.add("ResolutionMechanism");
 
         CaseSearchRequest caseSearchRequest = new CaseSearchRequest();
         List<CaseCriteria> caseCriteriaList = new ArrayList<>();
@@ -313,13 +324,25 @@ public class CaseRegistrationValidatorTest {
         caseSearchRequest.setRequestInfo(new RequestInfo());
         caseSearchRequest.setCriteria(caseCriteriaList);
 
-        when(caseRepository.getApplications(any())).thenReturn(caseCriteriaList);
-        assertThrows(CustomException.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
+        when(mdmsUtil.fetchMdmsData(new RequestInfo(),"pg","case", masterList)).thenReturn(mdmsRes);
+
+        when(individualService.searchIndividual(new RequestInfo(), "123")).thenReturn(true);
+        when(fileStoreUtil.fileStore("pg","123")).thenReturn(true);
+        when(advocateUtil.fetchAdvocateDetails(new RequestInfo(), "123")).thenReturn(true);
+        caseService.searchCases(caseSearchRequest);
+        when(configuration.getCaseBusinessServiceName()).thenReturn("case");
+
+        when(caseRepository.getApplications(any())).thenReturn((List.of(CaseCriteria.builder().filingNumber(courtCase.getFilingNumber()).caseId(String.valueOf(courtCase.getId()))
+                .cnrNumber(courtCase.getCnrNumber()).courtCaseNumber(courtCase.getCourCaseNumber()).build())));
+
+        assertThrows(Exception.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
     }
 
     @Test
     void testValidateApplicationExistence_ExistingApplicationMissingTenantId() {
+        CaseCriteria caseCriteria = new CaseCriteria();
         CourtCase courtCase = new CourtCase();
+//        courtCase.setTenantId("pg");
 
         assertThrows(CustomException.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
     }
@@ -327,7 +350,54 @@ public class CaseRegistrationValidatorTest {
     @Test
     void testValidateApplicationExistence_ExistingApplicationMissingFilingDate() {
         CourtCase courtCase = new CourtCase();
+        CaseCriteria caseCriteria = new CaseCriteria();
         courtCase.setTenantId("pg");
+
+        assertThrows(CustomException.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
+    }
+
+    @Test
+    void testValidateApplicationExistence_ExistingApplication_INDIVIDUAL_NOT_FOUND() {
+        CourtCase courtCase = new CourtCase();
+        courtCase.setTenantId("pg");
+        courtCase.setCaseCategory("civil");
+        Document document = new Document();
+        document.setFileStore("123");
+        courtCase.setDocuments(List.of(document));
+        AdvocateMapping advocateMapping = new AdvocateMapping();
+        advocateMapping.setAdvocateId("123");
+        courtCase.setRepresentatives(List.of(advocateMapping));
+        Party party = new Party();
+        party.setIndividualId("123");
+        courtCase.setLitigants(List.of(party));
+        LinkedCase linkedCase = LinkedCase.builder().id(UUID.randomUUID()).caseNumber("caseNumber").build();
+//        courtCase.setLinkedCases(List.of(linkedCase));
+        courtCase.setStatutesAndSections(List.of(new StatuteSection()));
+        courtCase.setFilingDate(LocalDate.parse("2021-12-12"));
+        Map<String, Map<String, JSONArray>> mdmsRes = new HashMap<>();
+        mdmsRes.put("case", new HashMap<>());
+        List<String> masterList = new ArrayList<>();
+        masterList.add("ComplainantType");
+        masterList.add("CaseCategory");
+        masterList.add("PaymentMode");
+        masterList.add("ResolutionMechanism");
+
+        CaseSearchRequest caseSearchRequest = new CaseSearchRequest();
+        List<CaseCriteria> caseCriteriaList = new ArrayList<>();
+        CaseCriteria caseCriteria = new CaseCriteria();
+        caseCriteria.setCaseId(linkedCase.getId().toString());
+        caseCriteriaList.add(caseCriteria);
+        caseSearchRequest.setRequestInfo(new RequestInfo());
+        caseSearchRequest.setCriteria(caseCriteriaList);
+
+        when(mdmsUtil.fetchMdmsData(new RequestInfo(),"pg","case", masterList)).thenReturn(mdmsRes);
+
+        when(individualService.searchIndividual(new RequestInfo(), "123")).thenThrow(new CustomException());
+        caseService.searchCases(caseSearchRequest);
+        when(configuration.getCaseBusinessServiceName()).thenReturn("case");
+
+        when(caseRepository.getApplications(any())).thenReturn((List.of(CaseCriteria.builder().filingNumber(courtCase.getFilingNumber()).caseId(String.valueOf(courtCase.getId()))
+                .cnrNumber(courtCase.getCnrNumber()).courtCaseNumber(courtCase.getCourCaseNumber()).build())));
 
         assertThrows(CustomException.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
     }
@@ -335,12 +405,13 @@ public class CaseRegistrationValidatorTest {
     @Test
     void testValidateApplicationExistence_ExistingApplicationMissingCaseCategory() {
         CourtCase courtCase = new CourtCase();
+        CaseCriteria caseCriteria = new CaseCriteria();
         courtCase.setTenantId("pg");
         courtCase.setFilingDate(LocalDate.now());
 
-        when(caseRepository.getApplications(any())).thenReturn(List.of(new CaseCriteria()));
+        when(caseRepository.getApplications(any())).thenReturn(List.of(caseCriteria));
 
-        assertThrows(Exception.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
+        assertThrows(CustomException.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
     }
 
     @Test
@@ -349,10 +420,11 @@ public class CaseRegistrationValidatorTest {
         courtCase.setTenantId("pg");
         courtCase.setFilingDate(LocalDate.now());
         courtCase.setCaseCategory("categ1");
+        CaseCriteria caseCriteria = new CaseCriteria();
 
-        when(caseRepository.getApplications(any())).thenReturn(List.of(new CaseCriteria()));
+        when(caseRepository.getApplications(any())).thenReturn(List.of(caseCriteria));
 
-        assertThrows(Exception.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
+        assertThrows(CustomException.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
     }
 
     @Test
@@ -362,16 +434,19 @@ public class CaseRegistrationValidatorTest {
         courtCase.setFilingDate(LocalDate.now());
         courtCase.setCaseCategory("categ1");
         courtCase.setStatutesAndSections(List.of(StatuteSection.builder().tenantId("pb").build()));
+        CaseCriteria caseCriteria = new CaseCriteria();
 
-        when(caseRepository.getApplications(any())).thenReturn(List.of(new CaseCriteria()));
+        when(caseRepository.getApplications(any())).thenReturn(List.of(caseCriteria));
 
-        assertThrows(Exception.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
+        assertThrows(CustomException.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
     }
 
     @Test
     void testValidateApplicationExistence_NoExistingApplication() {
         CourtCase courtCase = new CourtCase();
         courtCase.setFilingNumber("Filing123");
+
+        lenient().when(caseRepository.getApplications(any())).thenReturn(new ArrayList<>());
 
         Exception exception = assertThrows(CustomException.class, () -> validator.validateApplicationExistence(courtCase, new RequestInfo()));
     }
